Fix capitalization of "ToolJet" in header and footer

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
   <div class="header">
     <div class="container">
-      <h1>Tooljet Utilities</h1>
+      <h1>ToolJet Utilities</h1>
     </div>
   </div>
   <main class="container">
@@ -49,7 +49,7 @@
       </section>
     </div>
     <footer>
-      © <span id="y"></span> Tooljet
+      © <span id="y"></span> ToolJet
     </footer>
   </main>
   <script>document.getElementById('y').textContent = new Date().getFullYear();</script>
